--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Movie Eaters</title>
+    <link rel="icon" href="http://s3.amazonaws.com/www.adpretirementmarketing.com/emails/99-5448/0920/06/Movie_Eaters_Logo.jpg" type="image/x-icon/">
 </head>
 
 <body>
