--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Movie Eaters</title>
-  <link rel="icon"
-    href="assets/mefavicon.png"
-    type="image/x-icon/">
+  <link rel="icon" href="assets/mefavicon.png" type="image/x-icon/">
 
 </head>
 
@@ -23,8 +21,7 @@
         <h1 class="movieheader text-center sm:text-left">MOVIE EATERS</h1>
       </div>
       <div class="md:flex-shrink-0 ">
-        <img class="md:w-40"
-          src="assets/mefavicon.png">
+        <img class="md:w-40" src="assets/mefavicon.png">
       </div>
     </div>
   </header>
@@ -35,6 +32,7 @@
     <br>
     <!-- Row 1 -->
     <div class="row">
+      <div id="eveningdisplay"></div>
       <!--Column 1-->
       <div class="col-md-6 buttonTable">
         <!-- Button triggers new movie to be entered -->
@@ -64,41 +62,44 @@
     </div>
     </header>
 
- 
-        <!--Column 2-->
-        <!-- Movie results will get dumped Here -->
-        <results class="grid grid-rows-3 grid-flow-col gap-4 ml-2 mt-2">
-          <movie class="row-span-3 ml-2 mt-2" id="movieResults">
-  
-    <!-- Row 2 -->
-    <!-- Eateries results will get dumped Here -->
 
-          </movie>
-          <eater class="row-span-1 col-span-2 ml-2 mt-2 mr-2" id="eateriesResults">
-  
-          </eater>
-  
-        </results>
-  
-  
-      </div>
+    <!--Column 2-->
+    <!-- Movie results will get dumped Here -->
+    <results class="grid grid-rows-3 grid-flow-col gap-4 ml-2 mt-2">
+
+
+      <movie class="row-span-3 ml-2 mt-2" id="movieResults"></movie>
+
+
+      <!-- Row 2 -->
+      <!-- Eateries results will get dumped Here -->
+
+
+      <eater class="row-span-3 col-span-2 ml-2 mt-2 mr-2" id="eateriesResults"></eater>
 
 
 
+    </results>
+
+
+  </div>
 
 
 
 
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-        </script>
-      <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-      <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
-      <script type="text/javascript" src="script.js"></script>
 
-    </div>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
+
+  </div>
 </body>
 
 </html>
