--- a/index.html
+++ b/index.html
@@ -1,104 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Movie Eaters</title>
-  <link rel="icon"
-    href="assets/mefavicon.png"
-    type="image/x-icon/">
-
+  <link rel="icon" href="../assets/mefavicon.png" type="image/x-icon/">
 </head>
-
 <body>
-
-
   <header>
     <div class="md:flex items-center">
       <div class="mt-4 md:mt-10 md:ml-10 md:mr-10">
         <h1 class="movieheader text-center sm:text-left">MOVIE EATERS</h1>
       </div>
       <div class="md:flex-shrink-0 ">
-        <img class="md:w-40"
-          src="assets/mefavicon.png">
+        <img class="md:w-40" src="../assets/mefavicon.png">
       </div>
     </div>
   </header>
-
   <div class="container">
     <br>
     <br>
     <br>
     <!-- Row 1 -->
     <div class="row">
+      <div id="eveningdisplay"></div>
       <!--Column 1-->
       <div class="col-md-6 buttonTable">
         <!-- Button triggers new movie to be entered -->
         <div class="w-full max-w-xs">
           <form id="zipForm">
             <div class="mb-4">
-
               <input
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                 id="zipInput" type="text" placeholder="Enter Zip Code">
             </div>
-
             <div class="flex items-center justify-between">
               <button
                 class="bg-red-700 hover:bg-black-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
                 type="button" id="goBtn">
                 GO
               </button>
-
             </div>
           </form>
-
         </div>
       </div>
-
-
     </div>
     </header>
-
- 
-        <!--Column 2-->
-        <!-- Movie results will get dumped Here -->
-        <results class="grid grid-rows-3 grid-flow-col gap-4 ml-2 mt-2">
-          <movie class="row-span-3 ml-2 mt-2" id="movieResults">
-  
-    <!-- Row 2 -->
-    <!-- Eateries results will get dumped Here -->
-
-          </movie>
-          <eater class="row-span-1 col-span-2 ml-2 mt-2 mr-2" id="eateriesResults">
-  
-          </eater>
-  
-        </results>
-  
-  
+    <!--Column 2-->
+    <!-- Movie results will get dumped Here -->
+    <div class="grid grid-rows-3 grid-flow-col gap-4 ml-2 mt-2">
+      <div class="row-span-3 ml-2 mt-2" id="movieResults"></div>
+      <!-- Row 2 -->
+      <!-- Eateries results will get dumped Here -->
+      <div class="row-span-3 col-span-2 ml-2 mt-2 mr-2" id="eateriesResults">
+        <section id="eatsHere">
+        </section>
       </div>
-
-
-
-
-
-
-
-
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-        </script>
-      <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-      <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
-      <script type="text/javascript" src="script.js"></script>
-
     </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
+  </div>
 </body>
-
 </html>
