--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Movie Eaters</title>
-  <link rel="icon" href="../assets/mefavicon.png" type="image/x-icon/">
+  <link rel="icon" href="assets/mefavicon.png" type="image/x-icon/">
 </head>
 <body>
   <header>
@@ -15,7 +15,7 @@
         <h1 class="movieheader text-center sm:text-left">MOVIE EATERS</h1>
       </div>
       <div class="md:flex-shrink-0 ">
-        <img class="md:w-40" src="../assets/mefavicon.png">
+        <img class="md:w-40" src="assets/mefavicon.png">
       </div>
     </div>
   </header>
